hphp/hack/test/typecheck/reactive/nonrx_parent_call.php.exp
File "nonrx_parent_call.php", line 15, characters 12-22:
Reactive functions can only call other reactive functions. (Typing[4200])
File "nonrx_parent_call.php", line 6, characters 19-19:
This function is non-reactive.
